Signup use map on option now

--- a/src/components/Button/Signup/index.module.css
+++ b/src/components/Button/Signup/index.module.css
@@ -13,3 +13,11 @@
 .labelbold {
   font-weight: bold;
 }
+
+.height {
+  height: 415px; 
+  overflow: hidden;
+  overflow: auto;
+}
+
+.height::-webkit-scrollbar {display: none;}
