--- a/src/components/Button/Dropdown/index.module.css
+++ b/src/components/Button/Dropdown/index.module.css
@@ -17,7 +17,7 @@
     content:''; /* Required to display content */
     position: absolute; 
     top: 0;
-    left: 83%;
+    left: 80%;
 		margin-top:-11px; 
     width: 0;
     z-index:1;
@@ -25,6 +25,24 @@
     border-bottom: solid 15px #FFF; 
     border-left: solid 15px transparent; 
     border-right: solid 15px transparent; 
+}
+
+.toggle {
+  background-color: gray;
+  border-radius: 99rem;
+  border: 4px solid #cecece !important;
+  overflow: hidden;
+  padding: 0;
+  margin: 0;
+}
+
+.toggle::after{
+  display: none;
+}
+
+.pp {
+  width: 35px;
+  height: 35px;
 }
 
 .textBold {
