modal signin sudah selesai

--- a/src/components/Button/Dropdown/index.module.css
+++ b/src/components/Button/Dropdown/index.module.css
@@ -48,3 +48,13 @@
 .textBold {
   font-weight: bold;
 }
+
+.noDecoration {
+  text-decoration:none;
+  color: black;
+}
+
+.noDecoration:hover {
+  color: #5A57AB;
+  transition-duration: 500ms;
+}
