--- a/src/components/BookingLayout/index.module.css
+++ b/src/components/BookingLayout/index.module.css
@@ -6,7 +6,7 @@
   width: 1120px;
   margin-top: 36px;
   padding-top: 20px;
-
+  background-color: white;
   border-radius: 10px;
   box-shadow: 0 1px 10px -1px rgba(0, 0, 0, 0.3);
 }
@@ -27,7 +27,6 @@
   flex-direction: row;
   flex-basis: 40%;
   padding-left: 10px;
-  
   display: flex;
   justify-content: center;
 }
@@ -64,6 +63,11 @@
   width: 100px;
 }
 
+.itembottom {
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 20px;
+}
 
 
 
